--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,20 @@ services:
         build: .
         volumes:
             - .:/app
+    graphdatabase:
+      image: neo4j:4.0.3
+      ports:
+        - "7474:7474"
+        - "7687:7687"
+      volumes:
+        - ./neo4j/data:/data
+        - ./neo4j/logs:/logs
+        - ./neo4j/import/:/var/lib/neo4j/import
+        - ./neo4j/plugins:/plugins
+      environment:
+        - NEO4J_AUTH=neo4j/test
+        - NEO4J_dbms_default__listen__address=graphdatabase
+        - NEO4J_dbms_default__advertised__address=graphdatabase
+        - NEO4J_dbms_connector_bolt_listen__address=graphdatabase:7687
+        - NEO4J_dbms_connector_http_listen__address=graphdatabase:7474
+
